# d2conv3d

./: LICENSE  README.md  convert_csn_weights.py  dist_fit.py  env.yaml  main.py  trainer.py
config/: defaults.py  hack.py
config/data/: DAVIS.yaml
config/model/backbone/: irCSN152.yaml  irCSN152_ig65m.yaml  irCSN50.yaml  r3d18.yaml  r3d34.yaml  r3d50.yaml
config/paths/: default.yaml
datasets/: __init__.py  base_dataset.py  coco.py  concat_dataset.py  davis.py  fbms.py  util.py  youtube_vos.py
experiments/: __init__.py  base.py  saliency.py  util.py
experiments/inference/: handler.py
loss/: __init__.py  _lovasz.py  lovasz.py  region.py  util.py
network/: aspp.py  layers.py
network/backbone/: resnet.py
network/modules/: __init__.py  bridging.py  refinement.py  upsampling.py
network/segmentation/: __init__.py  encoder_decoder.py
ops/dconv-native/: .gitignore  README.md  setup.py
ops/dconv-native/csrc/: benchmark.cpp
ops/fast-depthwise-conv3d/: CMakeLists.txt  README.md  setup.py
ops/fast-depthwise-conv3d/csrc/: grouped_conv3d.cu  grouped_conv3d.h  main.cpp  python_bindings.cpp
ops/fast-depthwise-conv3d/src/fast_depthwise_conv3d/: __init__.py  conv.py
ops/fast-depthwise-conv3d/test/: __init__.py  test_conv3d_depthwise.py
run_scripts/: aspp.sh  baseline.sh  dconv.sh  mdconv.sh  run.sh  xx1.sh  xy1.sh  xyz.sh  xyz_linear.sh  xyz_no_modulation.sh  xyz_relu.sh  xyz_relu_plus_one.sh
utils/: average_meter.py  boxes.py  construct.py  distributed.py  grid.py  metrics.py  registry.py  replace.py  resize.py  scoreboard.py  util.py  video.py
(+30 files in other folders)
